[package]
name = "amm-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "TAMMqgJYcquwwj2tCdNUerh4C2bJjmghijVziSEf5tA"
program-dependencies = [
    "TL1ST2iRBzuGTqLn1KXnGdSnEow62BzPnGiqyRXhWtW",
    "TSWAPaqyCSx2KABk68Shruf4rp7CxcNi8hAsbdwmHbN",
    "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    "wns1gDLt8fgLcGhWi5MqAqgXpwEP1JftKE9eZnXS1HM",
    "diste3nXmK7ddDTs1zb6uday6j4etCa9RChD8fJ1xay",
    "noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV",
    "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
    "auth9SigNpDKz4sJJ1DfCTuZrZNSAgh9sFD3rboVmgg",

]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["default"] }
escrow-program = { version = "*", git = "ssh://git@github.com/tensor-foundation/escrow", features = [
    "cpi",
] }
mpl-token-metadata = "4.0.0"
solana-program = "<1.18"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"
static_assertions = "1.1.0"
tensor-escrow = { version = "0.1.1" }
tensor-toolbox = { version = "0.1.0", features = ["token-2022"] }
tensor-vipers = { version = "1.0.0" }
whitelist-program = { package = "whitelist-program", git = "ssh://git@github.com/tensor-foundation/whitelist.git", rev = "973c43b", features = [
    "cpi",
] }
